# foster-genai

./: pyproject.toml  train_gan.py
